k8s/base/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: chooseme-auth.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: service-auth
                port:
                  number: 80
